# Fitness-Studio-Member-System

./: .gitignore  PERI_member_database.xlsx  README.md  main.bat  pyproject.toml  requirements.txt  streamlit_app.py
backup/: backup_20251216_114535.xlsx
code/: 1_new_member.ipynb  edit.ipynb  main.py  verify_fix.py
code/mod/: A_add_member.py  B_purchase.py  C_consume.py  D_main_table.py  E_customized_course.py  F_refund.py  G_birthday.py  O_backup.py  O_config.py  O_connect_to_gsheet.py  O_general.py  add_member.py  config.py  consume.py  general.py  main_table.py  purchase.py
docs/: 專案架構說明書.md
temp/: 20251214.md  demand.md  專案架構說明書.md
